--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -48,6 +48,7 @@ sspAndroid = "1.1.1"
 startupRuntime = "1.1.1"
 sentry-android = "7.12.0"
 sentry-compose-android = "7.12.0"
+webkit = "1.11.0"
 
 
 [libraries]
@@ -90,6 +91,7 @@ androidx-startup-runtime = { group = "androidx.startup", name = "startup-runtime
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx-webkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilCompose" }
 compiler = { group = "com.android.databinding", name = "compiler", version.ref = "compiler" }
 converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converterJackson" }
